--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
   },
   "dependencies": {
     "@prisma/client": "5.14.0",
+    "bcryptjs": "2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "bcryptjs": "2.4.3"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "prisma": "5.14.0",
-    "typescript": "5.4.5",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "20.11.30",
-    "@types/react": "18.2.47"
+    "@types/react": "18.2.47",
+    "prisma": "5.14.0",
+    "typescript": "5.4.5"
   }
 }
